@@startuml backend

package app {
package models {
class ToDo {
    + id: UUID
    + title: str
    + description: str
    + created_at: datetime 
    + updated_at: datetime
    + deleted: bool
    + done: bool
    ---------------------
    update(values: dict): None
}

ToDo -|> dataclass
}

package schemas {

    class Status {
        SUCCESS: str
        FAILURE: str
    }

    class ToDo {
        + id: UUID
        + title: str 
        + description: str
        + reated_at: datetime
        + updated_at: datetime
        + deleted: bool
        + done: bool
    }

    class Config {
        + from_attributes: bool
        + populate_by_name: bool
        + arbitrary_types_allowed: bool

    }

    class ToDoResponse {

    status: Status
    todo_entry: ToDo
    }

   
    class GetToDoResponse(BaseModel) {
    status: Status
    todo_entry: ToDo
    }

    class ListToDoResponse{
    status: Status
    results: int
    todo_entries: List[ToDo]
    }


    class DeleteToDoResponse {
    status: Status
    message: str
    }

    Status -r-|> Enum
    ToDo -u-|> pydantic.BaseModel
    ToDoResponse -u-|> pydantic.BaseModel
    GetToDoResponse -u-|> pydantic.BaseModel
    ListToDoResponse -u-|> pydantic.BaseModel
    DeleteToDoResponse -u-|> pydantic.BaseModel
    ToDo *- Config
    ToDoResponse *-d- Status
    GetToDoResponse *-d- Status
    ListToDoResponse *-d- Status
    DeleteToDoResponse *-d- Status
}

package database {
note right: Handles interaction with database. Currently under reconstruction.

}
package todo {
    class ToDoRepository {
        + database_connection: Session
        ------------------------------
        + add_entry(new_to_do: models.ToDo)
        + delete_entry(to_do_id: str)
        + update_to_do(to_do_id: str, update_data: models.ToDo)
        + get_entry(to_do_entry_id: str)
        + get_all_entries(limit: int, page: int)
    }
}
package logger {
    class Logger {
        -------------------------------
        + log_missing_parameter(parameter_name: str)
        + log_not_initialized(self, reference_name: str)
    }
    Logger -d-|> logging.Logger
}

package api {
    class App
    {
        + origins: list[str]
        + logger: CustomLogger
        + debug: bool
        + title: str
        + version: str 
        + openapi_url: str
        -----------------
        + get_to_dos()
        + add_to_dos(new_to_do: ToDo)
        + delete_to_do(item_id: UUID)
        + update_to_do(item_id: UUID, body: dict)
    }

    App -u-|> FastAPI.App
    App *-r- webservice.Webservice
}
package webservice {
    class Webservice {
        update_entry(to_do_id: uuid.UUID, payload: dict[str, Any])
        get_entry(to_do_id: uuid.UUID)
        add_entry(payload: models.ToDo)
        delete_entry(to_do_id: uuid.UUID)
        get_all_to_do_entries()
    }
    Webservice *-d- todo.ToDoRepository
}
}

@@enduml